tests/e2e/cases/snapshots/tests__e2e__cases__fee_payer__assert_multichain_user_with_cross_chain_fee_payer_snapshot.snap
---
source: tests/e2e/cases/fee_payer.rs
expression: response_value
---
{
  "capabilities": {
    "assetDiffs": "[assetDiffs]",
    "authorizeKeys": [],
    "feePayerDigest": "[feePayerDigest]",
    "feeTotals": {
      "0x0": {
        "currency": "usd",
        "value": "[feeTotal]"
      },
      "0x7a69": {
        "currency": "usd",
        "value": "[feeTotal]"
      },
      "0x7a6a": {
        "currency": "usd",
        "value": "[feeTotal]"
      },
      "0x7a6b": {
        "currency": "usd",
        "value": "[feeTotal]"
      }
    },
    "revokeKeys": []
  },
  "context": {
    "quote": {
      "feePayerQuote": {
        "additionalAuthorization": null,
        "authorizationAddress": "[authorizationAddress]",
        "chainId": "0x7a6b",
        "ethPrice": "0xde0b6b3a7640000",
        "extraPayment": "0x0",
        "feeTokenDeficit": "0x0",
        "intent": {
          "combinedGas": "[combinedGas]",
          "encodedFundTransfers": [],
          "encodedPreCalls": [
            "[encodedPreCall]"
          ],
          "eoa": "[eoa]",
          "executionData": "[executionData]",
          "expiry": "0x0",
          "funder": "0x0000000000000000000000000000000000000000",
          "funderSignature": "0x",
          "isMultichain": false,
          "nonce": "[nonce]",
          "payer": "0x0000000000000000000000000000000000000000",
          "paymentAmount": "[paymentAmount]",
          "paymentMaxAmount": "[paymentMaxAmount]",
          "paymentRecipient": "0x0000000000000000000000000000000000000000",
          "paymentSignature": "0x",
          "paymentToken": "0xed1db453c3156ff3155a97ad217b3087d5dc5f6e",
          "settler": "0x0000000000000000000000000000000000000000",
          "settlerContext": "0x",
          "signature": "0x",
          "supportedAccountImplementation": "0xb19b36b1456e65e3a6d514d3f715f204bd59f431"
        },
        "nativeFeeEstimate": {
          "maxFeePerGas": "[maxFeePerGas]",
          "maxPriorityFeePerGas": "0x1"
        },
        "orchestrator": "0x700b6a60ce7eaaea56f065753d8dcb9653dbad35",
        "paymentTokenDecimals": 18,
        "txGas": "[txGas]"
      },
      "hash": "[hash]",
      "multiChainRoot": "[multiChainRoot]",
      "quotes": [
        {
          "additionalAuthorization": null,
          "authorizationAddress": null,
          "chainId": "0x7a69",
          "ethPrice": "0xde0b6b3a7640000",
          "extraPayment": "0x0",
          "feeTokenDeficit": "0x0",
          "intent": {
            "combinedGas": "[combinedGas]",
            "encodedFundTransfers": [],
            "encodedPreCalls": [],
            "eoa": "0xa023ba34fe23ad51d00515a68657e232ab6a1297",
            "executionData": "[executionData]",
            "expiry": "0x0",
            "funder": "[funder]",
            "funderSignature": "0x",
            "isMultichain": true,
            "nonce": "[nonce]",
            "payer": "[payer]",
            "paymentAmount": "[paymentAmount]",
            "paymentMaxAmount": "[paymentMaxAmount]",
            "paymentRecipient": "0x0000000000000000000000000000000000000000",
            "paymentSignature": "0x",
            "paymentToken": "0xed1db453c3156ff3155a97ad217b3087d5dc5f6e",
            "settler": "0x0000000000000000000000000000000000000000",
            "settlerContext": "0x",
            "signature": "0x",
            "supportedAccountImplementation": "0xb19b36b1456e65e3a6d514d3f715f204bd59f431"
          },
          "nativeFeeEstimate": {
            "maxFeePerGas": "[maxFeePerGas]",
            "maxPriorityFeePerGas": "0x1"
          },
          "orchestrator": "0x700b6a60ce7eaaea56f065753d8dcb9653dbad35",
          "paymentTokenDecimals": 18,
          "txGas": "[txGas]"
        },
        {
          "additionalAuthorization": null,
          "authorizationAddress": "0x29a79095352a718b3d7fe84e1f14e9f34a35598e",
          "chainId": "0x7a6a",
          "ethPrice": "0xde0b6b3a7640000",
          "extraPayment": "0x0",
          "feeTokenDeficit": "0x0",
          "intent": {
            "combinedGas": "[combinedGas]",
            "encodedFundTransfers": [
              "0x000000000000000000000000ed1db453c3156ff3155a97ad217b3087d5dc5f6e0000000000000000000000000000000000000000000000000000000000000064"
            ],
            "encodedPreCalls": [
              "[encodedPreCall]"
            ],
            "eoa": "0xa023ba34fe23ad51d00515a68657e232ab6a1297",
            "executionData": "[executionData]",
            "expiry": "0x0",
            "funder": "[funder]",
            "funderSignature": "0x",
            "isMultichain": true,
            "nonce": "[nonce]",
            "payer": "[payer]",
            "paymentAmount": "[paymentAmount]",
            "paymentMaxAmount": "[paymentMaxAmount]",
            "paymentRecipient": "0x0000000000000000000000000000000000000000",
            "paymentSignature": "0x",
            "paymentToken": "0xed1db453c3156ff3155a97ad217b3087d5dc5f6e",
            "settler": "0x917d31589198d61b6be2aa2ee03965cf5102380c",
            "settlerContext": "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000065",
            "signature": "0x",
            "supportedAccountImplementation": "0xb19b36b1456e65e3a6d514d3f715f204bd59f431"
          },
          "nativeFeeEstimate": {
            "maxFeePerGas": "[maxFeePerGas]",
            "maxPriorityFeePerGas": "0x1"
          },
          "orchestrator": "0x700b6a60ce7eaaea56f065753d8dcb9653dbad35",
          "paymentTokenDecimals": 6,
          "txGas": "[txGas]"
        }
      ],
      "r": "[r]",
      "s": "[s]",
      "ttl": "[ttl]",
      "v": "[v]",
      "yParity": "[yParity]"
    }
  },
  "digest": "[digest]",
  "key": {
    "prehash": false,
    "publicKey": "[publicKey]",
    "type": "secp256k1"
  },
  "signature": "[signature]",
  "typedData": {
    "domain": {},
    "message": {
      "combinedGas": "[combinedGas]",
      "encodedFundTransfers": [
        "[encodedFundTransfer]"
      ],
      "encodedPreCalls": [
        "[encodedPreCall]"
      ],
      "eoa": "0xa023ba34fe23ad51d00515a68657e232ab6a1297",
      "executionData": "[executionData]",
      "expiry": "0x0",
      "funder": "[funder]",
      "funderSignature": "0x",
      "isMultichain": true,
      "nonce": "[nonce]",
      "payer": "0x0000000000000000000000000000000000000000",
      "paymentAmount": "[paymentAmount]",
      "paymentMaxAmount": "0x0",
      "paymentRecipient": "0x0000000000000000000000000000000000000000",
      "paymentSignature": "0x",
      "paymentToken": "0xed1db453c3156ff3155a97ad217b3087d5dc5f6e",
      "settler": "0x917d31589198d61b6be2aa2ee03965cf5102380c",
      "settlerContext": "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000065",
      "signature": "0x",
      "supportedAccountImplementation": "0xb19b36b1456e65e3a6d514d3f715f204bd59f431"
    },
    "primaryType": "IntentV05",
    "types": {
      "EIP712Domain": [],
      "IntentV05": [
        {
          "name": "eoa",
          "type": "address"
        },
        {
          "name": "executionData",
          "type": "bytes"
        },
        {
          "name": "nonce",
          "type": "uint256"
        },
        {
          "name": "payer",
          "type": "address"
        },
        {
          "name": "paymentToken",
          "type": "address"
        },
        {
          "name": "paymentMaxAmount",
          "type": "uint256"
        },
        {
          "name": "combinedGas",
          "type": "uint256"
        },
        {
          "name": "encodedPreCalls",
          "type": "bytes[]"
        },
        {
          "name": "encodedFundTransfers",
          "type": "bytes[]"
        },
        {
          "name": "settler",
          "type": "address"
        },
        {
          "name": "expiry",
          "type": "uint256"
        },
        {
          "name": "isMultichain",
          "type": "bool"
        },
        {
          "name": "funder",
          "type": "address"
        },
        {
          "name": "funderSignature",
          "type": "bytes"
        },
        {
          "name": "settlerContext",
          "type": "bytes"
        },
        {
          "name": "paymentAmount",
          "type": "uint256"
        },
        {
          "name": "paymentRecipient",
          "type": "address"
        },
        {
          "name": "signature",
          "type": "bytes"
        },
        {
          "name": "paymentSignature",
          "type": "bytes"
        },
        {
          "name": "supportedAccountImplementation",
          "type": "address"
        }
      ]
    }
  }
}
